src/kubernetes/bucket-consumer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bucket-consumer
    kafka-role: consumer
  name: bucket-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bucket-consumer
      kafka-role: consumer
  strategy: {}
  template:
    metadata:
      labels:
        app: bucket-consumer
        kafka-role: consumer
    spec:
      securityContext:
        runAsUser: 1010
        runAsNonRoot: true
      automountServiceAccountToken: false
      containers:
      - image: bucket-consumer:latest
        imagePullPolicy: Never
        name: bucket-consumer
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3
        volumeMounts:
          - name: gcs-sa-key
            mountPath: /secrets/cs-api-key.json
            subPath:  cs-api-key.json
            readOnly: true
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
      volumes:
        - name: gcs-sa-key
          secret:
            secretName: gcs-sa-key
