src/kubernetes/bucket-consumer/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bucket-consumer-np
spec:
  podSelector:
    matchLabels:
      app: bucket-consumer
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - 
    ports:
    - protocol: TCP
      port: 9092


      ### CRIAR EGRESSO PARA CLOUDSTORAGE <- ESTUDAR SOBRE
